ci: optimize gh-pages scripts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bndynet/dialog",
-  "version": "1.0.0",
+  "version": "0.0.0-dev",
   "description": "An interactive dialog for browser includes alert, confirm and notifications",
   "main": "dist/dialog.umd.js",
   "module": "dist/dialog.es5.js",
@@ -12,12 +12,12 @@
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
     "build": "tsc --module commonjs && rollup -c rollup.config.ts && npm run docs",
-    "docs": "typedoc --theme ./node_modules/@bndynet/typedoc-default-themes/bin/default --out docs --target es6 --mode file src",
+    "docs": "typedoc --theme ./node_modules/@bndynet/typedoc-default-themes/bin/default --out docs/api --target es6 --mode file src",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
-    "deploy-docs": "ts-node tools/gh-pages-publish",
+    "deploy-gh-pages": "ts-node tools/gh-pages-prepare && ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "semantic-release": "semantic-release",
     "precommit": "lint-staged",
