--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "semantic-release": "semantic-release",
     "precommit": "lint-staged",
-    "init": "ts-node tools/init.ts"
+    "init": "ts-node tools/init.ts",
+    "prepublishOnly": "ts-node tools/inject-copyright"
   },
   "keywords": [],
   "author": {
