docs: project site and demo

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
-    "deploy-gh-pages": "ts-node tools/gh-pages-prepare && ts-node tools/gh-pages-publish",
+    "predeploy-gh-pages": "ts-node tools/gh-pages-prepare",
+    "deploy-gh-pages": "npm run predeploy-gh-pages && ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "semantic-release": "semantic-release",
     "precommit": "lint-staged",
