--- a/.releaserc
+++ b/.releaserc
@@ -19,6 +19,9 @@
             ]
         }],
         "@semantic-release/release-notes-generator",
+        ["@semantic-release/changelog", {
+            "changelogFile": "CHANGELOG.md",
+        }],
         "@semantic-release/npm",
         "@semantic-release/github",
         "@semantic-release/git"
