--- a/.releaserc
+++ b/.releaserc
@@ -1,14 +1,16 @@
 {
     "branch": "master",
     "prepare": [
+        "@semantic-release/changelog",
         "@semantic-release/npm",
         {
             "path": "@semantic-release/git",
             "assets": [
                 "package.json",
-                "package-lock.json"
+                "package-lock.json",
+                "CHANGELOG.md"
             ],
-        "message": "chore(release): ${nextRelease.version} by CI\n\n${nextRelease.notes}"
+            "message": "chore(release): ${nextRelease.version} by CI\n\n${nextRelease.notes}"
         }
     ],
     "plugins": [
