--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,7 @@
 
 [*]
 indent_style = space
-end_of_line = lf
+end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
